# zmjjkkgame

./: CMakeLists.txt  README.md
src/: gameaudio.cpp  gameaudio.h  gamepage.cpp  gamepage.h  loginpage.cpp  loginpage.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
